# RRC2025

./: .gitignore
agents/Interviewer/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  taskfile.yaml
agents/Interviewer/src/: agent.py  resume_parser.py
agents/Interviewer/tests/: test_agent.py
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/public/: company_data.json  interview.md
client/src/: index.css  main.tsx  router.tsx
client/src/api/: authService.ts
client/src/components/: MarkdownRenderer.tsx
client/src/config/: axiosInstance.ts  backendUrl.ts
client/src/layout/: Mainlayout.tsx  RootWrapper.tsx
client/src/lib/: CameraSettings.tsx  KeyboardShortcuts.tsx  MicrophoneSettings.tsx  RecordingIndicator.tsx  SettingsMenu.tsx  client-utils.ts  types.ts  usePerfomanceOptimiser.ts  useSetupE2EE.ts
job-search/: app.py  run_matcher.py  run_test.py
job-search/ai_job_matcher/: __init__.py  config.py  embeddings.py  main.py  models.py  workflow.py
job-search/chroma_db/: chroma.sqlite3
job-search/frontend/: index.html
job-search/jobspy/: model.py
job-search/resume-parser/: groq_parser.py
python-server/: .gitignore  README.md  main.py  pyproject.toml
server/: .env.example  .gitignore  package-lock.json  package.json  prisma.config.ts  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts  server.ts
voiceboard/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
voiceboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+96 files in other folders)
