[project]
name = "python-server"
version = "0.1.0"
description = "Multi-Modal RAG Q&A App with Gemini Pro"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "google-generativeai>=0.3.0",
    "chromadb>=0.4.0",
    "pypdf>=3.0.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.6",
    "uuid>=1.30",
    "flask-cors>=6.0.1",
    "pymupdf>=1.26.5",
]
